--- a/cines_count.ipynb
+++ b/cines_count.ipynb
@@ -1074,7 +1074,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "df_concat_count_cines.to_csv('datos_norm/cines.count.csv', index=None)"
+    "df_concat_count_cines.to_csv('datos_norm/cines_count.csv', index=None)"
    ]
   }
  ],
